plexmediaserver/deploy.yaml
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: plexmediaserver
  labels:
    k8s-app: plexmediaserver
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        k8s-app: plexmediaserver
    spec:
      containers:
      - name: plexmediaserver
        image: plexinc/pms-docker:plexpass
        imagePullPolicy: Always
        ports:
          # See
          # https://support.plex.tv/hc/en-us/articles/201543147-What-network-ports-do-I-need-to-allow-through-my-firewall
          # for port details
        - containerPort: 32400
        - containerPort: 1900
          protocol: "UDP"
        - containerPort: 32410
          protocol: "UDP"
        - containerPort: 32412
          protocol: "UDP"
        - containerPort: 32413
          protocol: "UDP"
        - containerPort: 32414
          protocol: "UDP"
        volumeMounts:
          - mountPath: "/config"
            name: config
          - mountPath: "/transcode"
            name: transcode
          - mountPath: "/data"
            name: video
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: plexmediaserver-config
        - name: transcode
          persistentVolumeClaim:
            claimName: plexmediaserver-transcode
        - nfs:
            server: fs1.oneill.net
            path: /volume1/shared/video
          name: video
