plexmediaserver/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: plexmediaserver
  labels:
    k8s-app: plexmediaserver
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  tls:
    - hosts:
      - "plex.k.oneill.net"
      secretName: "plexmediaserver-tls"
  rules:
    - host: "plex.k.oneill.net"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: plexmediaserver
                port:
                  number: 32400
